49) kernel: sfhash: add generic inline helper for more gcc optimize effect.<br>
50) kernel: mm: use clear_page_mlock() in page_remove_rmap().<br>
51) kernel: mm: remove free_page_mlock.<br>
52) kernel: mm: remove unevictable_pgs_mlockfreed.<br>
53) kernel: net: udp: fix behavior of wrong checksums.<br>
54) kernel: net: bridge: fix multicast router rlist endless loop.<br>
<br>
<br>
<b>3.2.x</b><br>
1) toolchain: update gcc to 20150614 4.8.5-RC version form git, update headers.<br>
2) dnsmasq: up to 2.73 version.<br>
3) nvram: add AutoChannelSkipList for skip channels from autoselect result (default for 2.4GHz 12;13;14 channel must be skip).<br>
4) defaults: temp set VHT_BW=20/40MHz for 7610NE, fix issue with some broadcom mobile clients.<br>
5) kernel: up to 3.4.108 base version.<br>
6) kernel: ralink wifi: 7610: fix clean NDP announces.<br>
7) kernel: ralink wifi: 7610: do not agregate low rate pkts.<br>
8) kernel: ralink wifi: 7610: fix txburst in AC mode.<br>
9) kernel: ralink wifi: 7610: apply 3.0.0.8 post pathces from MTK.<br>
10) kernel: ralink wifi: 76x2: apply 3.0.3.2 post pathces from MTK.<br>
11) kernel: ralink wifi: 76x2: add band steering options.<br>
12) kernel: ralink wifi: xxxx: allow SNMP for all drivers.<br>
13) kernel: ralink_raeth esw control: FCS bytes really not included to MIB counters.<br>
14) kernel: netfilter: don't use module_init/exit in core IPV4 code.<br>
<br>
<br>
<b>TODO:</b><br>
2) full russian ui (work end ~90%).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
7) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>