@@ -364,6 +364,16 @@
 
 #if defined (CONFIG_RALINK_MT7621)
 
+/* AC0..AC63 */
+#define PPE_AC_BCNT_GROUP0		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x000) // 64 bits
+#define PPE_AC_PCNT_GROUP0		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x008)
+#define PPE_AC_BCNT_GROUP1		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x010) // 64 bits
+#define PPE_AC_PCNT_GROUP1		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x018)
+#define PPE_AC_BCNT_GROUP2		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x020) // 64 bits
+#define PPE_AC_PCNT_GROUP2		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x028)
+#define PPE_AC_BCNT_GROUP63		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x3F0) // 64 bits
+#define PPE_AC_PCNT_GROUP63		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x3F8)
+
 #define GDMA1_RX_GBCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x400) // 64 bits
 #define GDMA1_RX_GPCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x408)
 #define GDMA1_RX_OERCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x410)
@@ -391,6 +401,18 @@
 #define GDMA2_TX_GPCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x478)
 
 #elif !defined (CONFIG_RALINK_RT5350) && !defined (CONFIG_RALINK_MT7628)
+
+#if defined (CONFIG_RALINK_MT7620)
+/* AC0..AC63 */
+#define PPE_AC_BCNT_GROUP0		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x000)
+#define PPE_AC_PCNT_GROUP0		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x004)
+#define PPE_AC_BCNT_GROUP1		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x008)
+#define PPE_AC_PCNT_GROUP1		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x00C)
+#define PPE_AC_BCNT_GROUP2		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x010)
+#define PPE_AC_PCNT_GROUP2		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x014)
+#define PPE_AC_BCNT_GROUP63		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x1F8)
+#define PPE_AC_PCNT_GROUP63		(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x1FC)
+#endif
 
 #define GDMA1_TX_GBCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x300)
 #define GDMA1_TX_GPCNT			(RALINK_FRAME_ENGINE_BASE+RACMTABLE_OFFSET+0x304)
